--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
-        context: ./html-docker-final
+        context: .
         push: ${{ github.event_name == 'push' }}
         tags: |
           ${{ secrets.DOCKER_USERNAME }}/html-docker-final:latest
